# Cartridge

./: .gitignore  Cargo.toml  Cross.toml  INSTALL.md  README.md  design_catridge.md  design_ux.md  dev-run.sh  install.sh  install_to_device.py  install_to_device.sh  pyproject.toml  registry.json
.cargo/: config.toml
.github/workflows/: build-installer.yml  release.yml
cartridges/calculator/: cartridge.toml
cartridges/calculator/src/: engine.py  main.py
cartridges/calculator/src/screens/: calc.py  history.py
cartridges/cartridge_client/: cartridge.toml
cartridges/cartridge_client/src/: main.py  registry.py  ui_constants.py
cartridges/cartridge_client/src/screens/: detail.py  installed.py  settings.py  store.py
cartridges/hacker_news/: cartridge.toml
cartridges/hacker_news/src/: api.py  main.py  models.py
cartridges/hacker_news/src/screens/: reader.py  story_detail.py  story_list.py
cartridges/pomodoro/: cartridge.toml
cartridges/pomodoro/src/: main.py  timer.py
cartridges/pomodoro/src/screens/: settings.py  stats.py  timer_screen.py
cartridges/stock_market/: cartridge.toml
cartridges/stock_market/src/: data.py  main.py  models.py
cartridges/stock_market/src/screens/: browse.py  detail.py  watchlist.py
cartridges/system_monitor/: cartridge.toml
cartridges/system_monitor/src/: main.py  stats.py
cartridges/system_monitor/src/screens/: cpu.py  memory.py  network.py  overview.py
cartridges/weather/: cartridge.toml
cartridges/weather/src/: api.py  main.py  models.py
cartridges/weather/src/screens/: current.py  forecast.py  settings.py
crates/cartridge-boot/: Cargo.toml
crates/cartridge-boot/src/: main.rs
crates/cartridge-core/: Cargo.toml
crates/cartridge-core/src/: atmosphere.rs  device.rs  font.rs  image_cache.rs  input.rs  lib.rs  screen.rs  storage.rs  sysinfo.rs  text_cache.rs  theme.rs
crates/cartridge-core/src/ui/: chart.rs  confirm_dialog.rs  detail_view.rs  footer.rs  grid_view.rs  list_view.rs  loading.rs  mod.rs  progress_bar.rs  status_bar.rs  tab_bar.rs  table.rs  text_input.rs  toast.rs
crates/cartridge-launcher/: Cargo.toml
crates/cartridge-launcher/src/: app.rs  data.rs  lib.rs  ui_constants.rs  ui_sounds.rs
crates/cartridge-launcher/src/screens/: detail.rs  home.rs  mod.rs  overlay.rs  settings.rs  store.rs  wifi.rs
crates/cartridge-lua/: Cargo.toml
crates/cartridge-lua/src/: api.rs  lib.rs  manifest.rs  runner.rs
crates/cartridge-net/: Cargo.toml
crates/cartridge-net/src/: cache.rs  client.rs  installer.rs  lib.rs  registry.rs  ssh.rs  wifi.rs
crates/cartridge-runner/: Cargo.toml
crates/cartridge-runner/src/: lib.rs  runner.rs
deploy/: autosetup.sh  cartridge-boot.service  cartridge-boot.sh
deploy/tools/: Cartridge.sh  Setup Cartridge Boot.sh  Undo Cartridge Boot.sh
docker/: Dockerfile.aarch64
docs/: lua-api.md  testing.md
lua_cartridges/ai_papers/: cartridge.json  main.lua
lua_cartridges/calculator/: cartridge.json  main.lua
lua_cartridges/hacker_news/: cartridge.json  main.lua
lua_cartridges/hello_world/: cartridge.json  main.lua
lua_cartridges/network_tool/: cartridge.json  main.lua
lua_cartridges/pomodoro/: cartridge.json  main.lua
lua_cartridges/stock_market/: cartridge.json  main.lua
lua_cartridges/system_monitor/: cartridge.json  main.lua
lua_cartridges/todo/: cartridge.json  main.lua
lua_cartridges/vibeboy/: cartridge.json  main.lua
lua_cartridges/weather/: cartridge.json  main.lua
python_src/cartridge_sdk/: __init__.py  app.py  input.py  management.py  manifest.py  net.py  runner.py  screen.py  storage.py  theme.py
python_src/cartridge_sdk/cli/: main.py
python_src/cartridge_sdk/reader/: __init__.py  extractor.py  image_loader.py  models.py
python_src/cartridge_sdk/ui/: __init__.py  chart.py  detail_view.py  list_view.py  loading.py  reader_view.py  status_bar.py  tab_bar.py  table.py  toast.py  widget.py  wifi.py
scripts/: generate_overlays.py
src/: main.rs
tests/: snapshot_test.rs
