[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.5.1"
edition = "2024"

[workspace.dependencies]
sdl2 = { version = "0.38", features = ["ttf", "gfx", "image"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }

[package]
name = "cartridge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cartridge"
path = "src/main.rs"

[dependencies]
cartridge-core = { path = "crates/cartridge-core" }
cartridge-runner = { path = "crates/cartridge-runner" }
cartridge-lua = { path = "crates/cartridge-lua" }
cartridge-launcher = { path = "crates/cartridge-launcher" }
env_logger.workspace = true
log.workspace = true

[dev-dependencies]
image.workspace = true

[[bin]]
name = "perf-bench"
path = "src/bin/perf_bench.rs"

[[bin]]
name = "snapshot"
path = "src/bin/snapshot.rs"
