[package]
name = "cartridge-boot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cartridge-boot"
path = "src/main.rs"

[dependencies]
cartridge-core = { path = "../cartridge-core" }
sdl2.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
